overflow Bug Fix

--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,6 @@ section {
 }
 
 body {
-	overflow: hidden;
 	line-height: 1;
 	margin: 0;
 	padding: 0;
